@@ -3,6 +3,14 @@ ikiwiki (3.20120726) UNRELEASED; urgency=low
   * monochrome: New theme, contributed by Jon Dowland.
   * rst: Ported to python 3, while still also being valid python 2.
     Thanks, W. Trevor King
+  * Try to avoid a situation in which so many ikiwiki cgi wrapper programs
+    are running, all waiting on some long-running thing like a site rebuild,
+    that it prevents the web server from doing anything else. The current
+    approach only avoids this problem for GET requests; if multiple cgi's
+    run GETs on a site at the same time, one will display a "please wait"
+    page for a configurable number of seconds, which then redirects to retry.
+    To enable this protection, set cgi_overload_delay to the number of
+    seconds to wait. This is not enabled by default.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 30 Aug 2012 11:56:12 -0400
 
